add nav bar, album images, intro text
added album cover images to nav bar that take to each site.
added album cover images that will be used for each page.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,33 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<head>
+    <!-- the google api that gives us the font "Zilla Slab" which would be a sick band name-->
+    <!-- source for the guitar image https://www.pexels.com/photo/audio-e-guitars-guitars-music-6966/ -->
+    <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="styles/style.css">
+</head>
+<body class="bg-title">
+    <h1 class="title-font"> <a href="index.html">My Favorite Albums of All Time</a> </h1>
+    <main>
+        <p>
+            Hi my name is Sebastian Schroh, and here is a list of my favorite albums in no particular order
+        </p>
+        <ul>
+            <li>Titanic Rising by Weyes Blood</li>
+            <li>Exmilitary by Death Grips</li>
+            <li>To Pimp a Butterfly by Kendrick Lamar</li>
+            <li>Blonde by Frank Ocean</li>
+            <li>Untrue by Burial</li>
+        </ul>
+        <p>
+            Click on the pictures below to learn more about each album
+        </p>
+        <nav> 
+            <ul>
+                <!-- While this line is comically large, it is like that on purpose to remove spacing from my imgs so that they span the whole screen-->
+                <li><a href="weyesblood.html"><img src="images/weyes-blood-titanic-rising-album-cover-640x640.jpg"></a></li><li><a href="deathgrips.html"><img src="images/death-grips-exmilitary-cover-640x640.jpeg"></a></li><li><a href="kendicklamar.html"><img src="images/kendrick-lamar-to-pimp-a-butterfly-640x640.jpg"></a></li><li><a href="frankocean.html"><img src="images/frank-ocean-blonde-640x640.jpg"></a></li><li><a href="burial.html"><img src="images/burial-untrue-640x640.jpg"></a></li>
+            </ul>
+        </nav>
+    </main>
 </body>
 </html>
