added death grips, weyes blood, frank ocean and kendrick lamar

--- a/kendricklamar.html
+++ b/kendricklamar.html
@@ -6,16 +6,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body class="bg bg-frankocean bg-tint-frankocean">
+<body class="bg bg-kendricklamar bg-tint-kendricklamar">
     <main>
-        <h2 class="top-left-site-link text-frankocean"><a href="index.html">My Favorite<br>Albums of<br>All Time</a></h2>
-        <div class ="title-card-frankocean">
-            <h1 class="title-frankocean text-frankocean"><i>Blonde</i></h1>
-            <h2 class="subtitle-frankocean text-frankocean">Frank Ocean</h2>
+        <h2 class="top-left-site-link text-kendricklamar"><a href="index.html">My Favorite<br>Albums of<br>All Time</a></h2>
+        <div class ="title-card-kendricklamar">
+            <h1 class="title-kendricklamar text-kendricklamar"><i>To Pimp A Butterfly</i></h1>
+            <h2 class="subtitle-kendricklamar text-kendricklamar">Kendrick Lamar</h2>
         </div>
         <div class="album-and-tracklist">
-            <img class="img-frankocean-album-cover" src="images/frank-ocean-blonde-640x640.jpg"></img>
-            <table class="table-frankocean">
+            <img class="img-kendricklamar-album-cover" src="images/kendrick-lamar-to-pimp-a-butterfly-640x640.jpg"></img>
+            <table class="table-kendricklamar">
                 <tr>
                     <th>Track #</th>
                     <th>Title</th>
@@ -74,7 +74,7 @@
             </table>
         </div>
         <div >
-            <p class="text-frankocean">
+            <p class="text-kendricklamar">
                 this is one of the best chamber pop records to come out ever
             </p>
         </div>
