--- a/deathgrips.html
+++ b/deathgrips.html
@@ -6,18 +6,79 @@
     <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body class="bg-title">
+<body class="bg bg-deathgrips bg-tint-deathgrips">
     <main>
-        <h1> My Favorite Albums of All Time</h1>
-        <nav> 
-            <ul>
-                <li><a>To Pimp a Butterfly, Kendrick Lamar</a></li>
-                <li><a>Untrue, Burial</a></li>
-                <li><a>Blonde, Frank Ocean</a></li>
-                <li><a>Exmillitary, Death Grips</a></li>
-                <li><a>Titanic Rising, Weyes Blood</a></li>
-            </ul>
-        </nav>
+        <h2 class="top-left-site-link text-deathgrips"><a href="index.html">My Favorite<br>Albums of<br>All Time</a></h2>
+        <div class ="title-card-deathgrips">
+            <h1 class="title-deathgrips text-deathgrips"><i>Exmilitary</i></h1>
+            <h2 class="subtitle-deathgrips text-deathgrips">Death Grips</h2>
+        </div>
+        <div class="album-and-tracklist">
+            <img class="img-deathgrips-album-cover" src="images/death-grips-exmilitary-cover-640x640.jpeg"></img>
+            <table class="table-deathgrips">
+                <tr>
+                    <th>Track #</th>
+                    <th>Title</th>
+                    <th>Length</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>A Lot's Gonna Change</td>
+                    <td>4:22</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Andromeda</td>
+                    <td>4:40</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Everyday</td>
+                    <td>5:07</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Something to Believe</td>
+                    <td>4:46</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>Titanic Rising</td>
+                    <td>1:36</td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td>Movies</td>
+                    <td>5:54</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td>Mirror Forever</td>
+                    <td>5:06</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td>Wild Time</td>
+                    <td>6:09</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td>Picture Me Better</td>
+                    <td>3:42</td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td>Nearer to Thee</td>
+                    <td>1:06</td>
+                </tr>
+            </table>
+        </div>
+        <div >
+            <p class="text-deathgrips">
+                this is one of the best chamber pop records to come out ever
+            </p>
+        </div>
+        
     </main>
 </body>
 </html>
