--- a/index.html
+++ b/index.html
@@ -6,26 +6,86 @@
     <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body class="bg-title">
-    <h1 class="title-font"> <a href="index.html">My Favorite Albums of All Time</a> </h1>
+<body class="bg bg-title">
     <main>
-        <p>
-            Hi my name is Sebastian Schroh, and here is a list of my favorite albums in no particular order
-        </p>
-        <ul>
-            <li>Titanic Rising by Weyes Blood</li>
-            <li>Exmilitary by Death Grips</li>
-            <li>To Pimp a Butterfly by Kendrick Lamar</li>
-            <li>Blonde by Frank Ocean</li>
-            <li>Untrue by Burial</li>
-        </ul>
-        <p>
-            Click on the pictures below to learn more about each album
-        </p>
+        <h1 class="title-font"> <a href="index.html">My Favorite<br> Albums of All Time</a> </h1>
+        <div class="intro-section">
+            <p>
+                Hi my name is Sebastian Schroh, and here is a list of my favorite albums in no particular order
+            </p>
+            <ul>
+                <li><i>Titanic Rising</i> by Weyes Blood</li>
+                <li><i>Exmilitary</i> by Death Grips</li>
+                <li><i>To Pimp a Butterfly</i> by Kendrick Lamar</li>
+                <li><i>Blonde</i> by Frank Ocean</li>
+                <li><i>Untrue</i> by Burial</li>
+            </ul>
+            <p>
+                Click on the pictures below to learn more about each album
+            </p>
+        </div>
         <nav> 
             <ul>
-                <!-- While this line is comically large, it is like that on purpose to remove spacing from my imgs so that they span the whole screen-->
-                <li><a href="weyesblood.html"><img src="images/weyes-blood-titanic-rising-album-cover-640x640.jpg"></a></li><li><a href="deathgrips.html"><img src="images/death-grips-exmilitary-cover-640x640.jpeg"></a></li><li><a href="kendicklamar.html"><img src="images/kendrick-lamar-to-pimp-a-butterfly-640x640.jpg"></a></li><li><a href="frankocean.html"><img src="images/frank-ocean-blonde-640x640.jpg"></a></li><li><a href="burial.html"><img src="images/burial-untrue-640x640.jpg"></a></li>
+                    <li>
+                        <a href="weyesblood.html">
+                            <div class="image-text-container">
+                                <img src="images/weyes-blood-titanic-rising-album-cover-640x640.jpg">
+                                <div class="image-text-overlay">
+                                    <div class="image-text">
+                                        Weyes Blood<br>Titanic Rising
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </li>              
+                    <li>
+                        <a href="deathgrips.html">
+                            <div class="image-text-container">
+                                <img src="images/death-grips-exmilitary-cover-640x640.jpeg">
+                                <div class="image-text-overlay">
+                                    <div class="image-text">
+                                        Death Grips<br>Exmilitary
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="kendricklamar.html">
+                            <div class="image-text-container">
+                                <img src="images/kendrick-lamar-to-pimp-a-butterfly-640x640.jpg">
+                                <div class="image-text-overlay">
+                                    <div class="image-text">
+                                        Kendrick Lamar<br>To Pimp A Butterfly
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="frankocean.html">
+                            <div class="image-text-container">
+                                <img src="images/frank-ocean-blonde-640x640.jpg">
+                                <div class="image-text-overlay">
+                                    <div class="image-text">
+                                        Frank Ocean<br>Blonde
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="burial.html">
+                            <div class="image-text-container">
+                                <img src="images/burial-untrue-640x640.jpg">
+                                <div class="image-text-overlay">
+                                    <div class="image-text">
+                                        Burial<br>Untrue
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
             </ul>
         </nav>
     </main>
