changed the nav bar orientation

--- a/index.html
+++ b/index.html
@@ -24,70 +24,60 @@
                 Click on the pictures below to learn more about each album
             </p>
         </div>
-        <nav> 
-            <ul>
-                    <li>
-                        <a href="weyesblood.html">
-                            <div class="image-text-container">
-                                <img src="images/weyes-blood-titanic-rising-album-cover-640x640.jpg">
-                                <div class="image-text-overlay">
-                                    <div class="image-text">
-                                        Weyes Blood<br>Titanic Rising
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </li>              
-                    <li>
-                        <a href="deathgrips.html">
-                            <div class="image-text-container">
-                                <img src="images/death-grips-exmilitary-cover-640x640.jpeg">
-                                <div class="image-text-overlay">
-                                    <div class="image-text">
-                                        Death Grips<br>Exmilitary
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="kendricklamar.html">
-                            <div class="image-text-container">
-                                <img src="images/kendrick-lamar-to-pimp-a-butterfly-640x640.jpg">
-                                <div class="image-text-overlay">
-                                    <div class="image-text">
-                                        Kendrick Lamar<br>To Pimp A Butterfly
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="frankocean.html">
-                            <div class="image-text-container">
-                                <img src="images/frank-ocean-blonde-640x640.jpg">
-                                <div class="image-text-overlay">
-                                    <div class="image-text">
-                                        Frank Ocean<br>Blonde
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="burial.html">
-                            <div class="image-text-container">
-                                <img src="images/burial-untrue-640x640.jpg">
-                                <div class="image-text-overlay">
-                                    <div class="image-text">
-                                        Burial<br>Untrue
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-            </ul>
-        </nav>
+        <div class="album-bar">
+            <a href="weyesblood.html">
+                <div class="image-text-container">
+                    <img src="images/weyes-blood-titanic-rising-album-cover-640x640.jpg">
+                    <div class="image-text-overlay">
+                        <div class="image-text">
+                            Weyes Blood<br>Titanic Rising
+                        </div>
+                    </div>
+                </div>
+            </a>
+
+            <a href="deathgrips.html">
+                <div class="image-text-container">
+                    <img src="images/death-grips-exmilitary-cover-640x640.jpeg">
+                    <div class="image-text-overlay">
+                        <div class="image-text">
+                            Death Grips<br>Exmilitary
+                        </div>
+                    </div>
+                </div>
+            </a>
+
+            <a href="kendricklamar.html">
+                <div class="image-text-container">
+                    <img src="images/kendrick-lamar-to-pimp-a-butterfly-640x640.jpg">
+                    <div class="image-text-overlay">
+                        <div class="image-text">
+                            Kendrick Lamar<br>To Pimp A Butterfly
+                        </div>
+                    </div>
+                </div>
+            </a>
+            <a href="frankocean.html">
+                <div class="image-text-container">
+                    <img src="images/frank-ocean-blonde-640x640.jpg">
+                    <div class="image-text-overlay">
+                        <div class="image-text">
+                            Frank Ocean<br>Blonde
+                        </div>
+                    </div>
+                </div>
+            </a>
+            <a href="burial.html">
+                <div class="image-text-container">
+                    <img src="images/burial-untrue-640x640.jpg">
+                    <div class="image-text-overlay">
+                        <div class="image-text">
+                            Burial<br>Untrue
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </div>
     </main>
 </body>
 </html>
