finished the site

--- a/burial.html
+++ b/burial.html
@@ -6,18 +6,123 @@
     <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body class="bg-title">
+<body class="bg bg-burial bg-tint-burial">
     <main>
-        <h1> Burial, Untitled</h1>
-        <nav> 
-            <ul>
-                <li><a>To Pimp a Butterfly, Kendrick Lamar</a></li>
-                <li><a>Untrue, Burial</a></li>
-                <li><a>Blonde, Frank Ocean</a></li>
-                <li><a>Exmillitary, Death Grips</a></li>
-                <li><a>Titanic Rising, Weyes Blood</a></li>
-            </ul>
+        <h2 class="top-left-site-link text-burial"><a href="index.html">My Favorite<br>Albums of<br>All Time</a></h2>
+        <nav class="nav-burial">
+            <a class ="text-burial" href="weyesblood.html"><i>Titanic Rising</i><br>Weyes Blood</a>
+            <a class ="text-burial" href="deathgrips.html"><i>Exmilitary</i><br>Death Grips</a>
+            <a class ="text-burial" href="kendricklamar.html"><i>To Pimp A Butterfly</i><br> Kendrick Lamar</a>
+            <a class ="text-burial" href="frankocean.html"><i>Blonde</i><br>Frank Ocean</a>
+            <a class ="text-burial" href="burial.html"><i>Untrue</i><br>Burial</a>
+            <a class ="text-burial" href="charlixcx.html"><i>Charli</i><br>Charli XCX</a>
         </nav>
+        <div class ="title-card-burial">
+            <h1 class="title-burial text-burial"><i>Untrue</i></h1>
+            <h2 class="subtitle-burial text-burial">Burial</h2>
+        </div>
+        <div class="album-and-tracklist">
+            <img class="img-burial-album-cover" src="images/burial-untrue-640x640.jpg"></img>
+            <table class="table-burial">
+                <tr>
+                    <th>Track #</th>
+                    <th>Title</th>
+                    <th>Length</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>"Untitled"</td>
+                    <td>0:46</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>"Archangel"</td>
+                    <td>3:58</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>"Near Dark"</td>
+                    <td>3:54</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>"Ghost Hardware"</td>
+                    <td>4:53</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>"Endorphin"</td>
+                    <td>2:57</td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td>"Etched Headplate"</td>
+                    <td>5:59</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td>"In McDonalds"</td>
+                    <td>2:07</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td>"Untrue"</td>
+                    <td>6:16</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td>"Shell of Light"</td>
+                    <td>4:40</td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td>"Dog Shelter"</td>
+                    <td>2:59</td>
+                </tr>
+                <tr>
+                    <td>11</td>
+                    <td>"Homeless"</td>
+                    <td>5:20</td>
+                </tr>
+                <tr>
+                    <td>12</td>
+                    <td>"UK"</td>
+                    <td>1:40</td>
+                </tr>
+                <tr>
+                    <td>13</td>
+                    <td>"Raver"</td>
+                    <td>4:59</td>
+                </tr>
+                <tr>
+                    <td>14</td>
+                    <td>"UK"</td>
+                    <td>1:40</td>
+                </tr>
+                <tr>
+                    <td>15</td>
+                    <td>"Raver"</td>
+                    <td>4:59</td>
+                </tr>
+            </table>
+        </div>
+        <div >
+            <p class="text-burial album-description">
+                Burial (William Emmanuel Bevan) is a British electronic musician<br> from South London, England.
+                <br>
+                <br>
+                <i>Untrue</i> is Burial's second studio album, and is combination of dusbtep,<br> UK garage and ambient music. 
+                <br>
+                <br>
+                <i>Untrue</i> was released on November 5, 2007 under the record label<br>Hyperdub.
+                <br>
+                <br>
+                My favorite song is "Archangel"
+                <br>
+                    <br> 
+            </p>
+        </div>
+        
     </main>
 </body>
 </html>
