--- a/frankocean.html
+++ b/frankocean.html
@@ -9,6 +9,14 @@
 <body class="bg bg-frankocean bg-tint-frankocean">
     <main>
         <h2 class="top-left-site-link text-frankocean"><a href="index.html">My Favorite<br>Albums of<br>All Time</a></h2>
+        <nav class="nav-frankocean">
+            <a class ="text-frankocean" href="weyesblood.html"><i>Titanic Rising</i><br>Weyes Blood</a>
+            <a class ="text-frankocean" href="deathgrips.html"><i>Exmilitary</i><br>Death Grips</a>
+            <a class ="text-frankocean" href="kendricklamar.html"><i>To Pimp A Butterfly</i><br> Kendrick Lamar</a>
+            <a class ="text-frankocean" href="frankocean.html"><i>Blonde</i><br>Frank Ocean</a>
+            <a class ="text-frankocean" href="burial.html"><i>Untrue</i><br>Burial</a>
+            <a class ="text-frankocean" href="charlixcx.html"><i>Charli</i><br>Charli XCX</a>
+        </nav>
         <div class ="title-card-frankocean">
             <h1 class="title-frankocean text-frankocean"><i>Blonde</i></h1>
             <h2 class="subtitle-frankocean text-frankocean">Frank Ocean</h2>
@@ -23,59 +31,106 @@
                 </tr>
                 <tr>
                     <td>1</td>
-                    <td>A Lot's Gonna Change</td>
-                    <td>4:22</td>
+                    <td>"Nikes"</td>
+                    <td>5:14</td>
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td>Andromeda</td>
-                    <td>4:40</td>
+                    <td>"Ivy"</td>
+                    <td>4:09</td>
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td>Everyday</td>
-                    <td>5:07</td>
+                    <td>"Pink + White"</td>
+                    <td>3:04</td>
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td>Something to Believe</td>
-                    <td>4:46</td>
+                    <td>"Be Yourself"</td>
+                    <td>1:26</td>
                 </tr>
                 <tr>
                     <td>5</td>
-                    <td>Titanic Rising</td>
-                    <td>1:36</td>
+                    <td>"Solo"</td>
+                    <td>4:17</td>
                 </tr>
                 <tr>
                     <td>6</td>
-                    <td>Movies</td>
-                    <td>5:54</td>
+                    <td>"Skyline To"</td>
+                    <td>3:04</td>
                 </tr>
                 <tr>
                     <td>7</td>
-                    <td>Mirror Forever</td>
-                    <td>5:06</td>
+                    <td>"Self Control"</td>
+                    <td>4:09</td>
                 </tr>
                 <tr>
                     <td>8</td>
-                    <td>Wild Time</td>
-                    <td>6:09</td>
+                    <td>"Good Guy"</td>
+                    <td>1:06</td>
                 </tr>
                 <tr>
                     <td>9</td>
-                    <td>Picture Me Better</td>
-                    <td>3:42</td>
+                    <td>"Nights"</td>
+                    <td>5:07</td>
                 </tr>
                 <tr>
                     <td>10</td>
-                    <td>Nearer to Thee</td>
-                    <td>1:06</td>
+                    <td>"Solo (Reprise)"</td>
+                    <td>1:18</td>
                 </tr>
+                <tr>
+                    <td>11</td>
+                    <td>"Pretty Sweet"</td>
+                    <td>2:37</td>
+                </tr>
+                <tr>
+                    <td>12</td>
+                    <td>"Facebook Story"</td>
+                    <td>1:08</td>
+                </tr>
+                <tr>
+                    <td>13</td>
+                    <td>"Close to You"</td>
+                    <td>1:25</td>
+                </tr>
+                <tr>
+                    <td>14</td>
+                    <td>"White Ferrari"</td>
+                    <td>4:08</td>
+                </tr>
+                <tr>
+                    <td>15</td>
+                    <td>"Seigfried"</td>
+                    <td>5:34</td>
+                </tr>
+                <tr>
+                    <td>16</td>
+                    <td>"Godspeed"</td>
+                    <td>2:57</td>
+                </tr>
+                <tr>
+                    <td>17</td>
+                    <td>"Futura Free"</td>
+                    <td>9:24</td>
+                </tr>
+            </table>
             </table>
         </div>
         <div >
-            <p class="text-frankocean">
-                this is one of the best chamber pop records to come out ever
+            <p class="text-frankocean album-description">
+                Frank Ocean (Christopher Breaux) is an American singer-songwriter<br> from Long Beach, California.
+                <br>
+                <br>
+                <i>Blonde</i> is Ocean's third studio album, and my favorite album. 
+                <br>
+                <br>
+                <i>Blonde</i> was released on August 20, 2016 under Ocean's own label,<br> Boys Don't Cry.
+                <br>
+                <br>
+                My favorite song is "Ivy"
+                <br>
+                    <br> 
             </p>
         </div>
         
