--- a/weyesblood.html
+++ b/weyesblood.html
@@ -9,6 +9,14 @@
 <body class="bg bg-weyesblood bg-tint-weyesblood">
     <main>
         <h2 class="top-left-site-link text-weyesblood"><a href="index.html">My Favorite<br>Albums of<br>All Time</a></h2>
+        <nav class="nav-weyesblood">
+            <a class ="text-weyesblood" href="weyesblood.html"><i>Titanic Rising</i><br>Weyes Blood</a>
+            <a class ="text-weyesblood" href="deathgrips.html"><i>Exmilitary</i><br>Death Grips</a>
+            <a class ="text-weyesblood" href="kendricklamar.html"><i>To Pimp A Butterfly</i><br> Kendrick Lamar</a>
+            <a class ="text-weyesblood" href="frankocean.html"><i>Blonde</i><br>Frank Ocean</a>
+            <a class ="text-weyesblood" href="burial.html"><i>Untrue</i><br>Burial</a>
+            <a class ="text-weyesblood" href="charlixcx.html"><i>Charli</i><br>Charli XCX</a>
+        </nav>
         <div class ="title-card-weyesblood">
             <h1 class="title-weyesblood text-weyesblood"><i>Titanic Rising</i></h1>
             <h2 class="subtitle-weyesblood text-weyesblood"> Weyes Blood</h2>
@@ -23,59 +31,70 @@
                 </tr>
                 <tr>
                     <td>1</td>
-                    <td>A Lot's Gonna Change</td>
+                    <td>"A Lot's Gonna Change"</td>
                     <td>4:22</td>
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td>Andromeda</td>
+                    <td>"Andromeda"</td>
                     <td>4:40</td>
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td>Everyday</td>
+                    <td>"Everyday"</td>
                     <td>5:07</td>
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td>Something to Believe</td>
+                    <td>"Something to Believe"</td>
                     <td>4:46</td>
                 </tr>
                 <tr>
                     <td>5</td>
-                    <td>Titanic Rising</td>
+                    <td>"Titanic Rising"</td>
                     <td>1:36</td>
                 </tr>
                 <tr>
                     <td>6</td>
-                    <td>Movies</td>
+                    <td>"Movies"</td>
                     <td>5:54</td>
                 </tr>
                 <tr>
                     <td>7</td>
-                    <td>Mirror Forever</td>
+                    <td>"Mirror Forever"</td>
                     <td>5:06</td>
                 </tr>
                 <tr>
                     <td>8</td>
-                    <td>Wild Time</td>
+                    <td>"Wild Time"</td>
                     <td>6:09</td>
                 </tr>
                 <tr>
                     <td>9</td>
-                    <td>Picture Me Better</td>
+                    <td>"Picture Me Better"</td>
                     <td>3:42</td>
                 </tr>
                 <tr>
                     <td>10</td>
-                    <td>Nearer to Thee</td>
+                    <td>"Nearer to Thee"</td>
                     <td>1:06</td>
                 </tr>
             </table>
         </div>
         <div >
-            <p class="text-weyesblood">
-                this is one of the best chamber pop records to come out ever
+            <p class="text-weyesblood album-description">
+                Natalia Laura Mering, known best as Weyes Blood, is an American<br> singer,songwriter and musician.
+                <br>
+                <br>
+                <i>Titanic Rising</i> is one of the best chamber pop records to come out ever, <br> and my personal favorite chamber pop album.
+                <br>
+                <br>
+                <i>Titanic Rising</i> was released on April 5, 2019 under the record <br>label Sub Pop.
+                <br>
+                <br>
+                My favorite song is "Something To Believe".
+                <br>
+                <br>
             </p>
         </div>
         
