--- a/deathgrips.html
+++ b/deathgrips.html
@@ -9,6 +9,14 @@
 <body class="bg bg-deathgrips bg-tint-deathgrips">
     <main>
         <h2 class="top-left-site-link text-deathgrips"><a href="index.html">My Favorite<br>Albums of<br>All Time</a></h2>
+        <nav class="nav-deathgrips">
+            <a class ="text-deathgrips" href="weyesblood.html"><i>Titanic Rising</i><br>Weyes Blood</a>
+            <a class ="text-deathgrips" href="deathgrips.html"><i>Exmilitary</i><br>Death Grips</a>
+            <a class ="text-deathgrips" href="kendricklamar.html"><i>To Pimp A Butterfly</i><br> Kendrick Lamar</a>
+            <a class ="text-deathgrips" href="frankocean.html"><i>Blonde</i><br>Frank Ocean</a>
+            <a class ="text-deathgrips" href="burial.html"><i>Untrue</i><br>Burial</a>
+            <a class ="text-deathgrips" href="charlixcx.html"><i>Charli</i><br>Charli XCX</a>
+        </nav>
         <div class ="title-card-deathgrips">
             <h1 class="title-deathgrips text-deathgrips"><i>Exmilitary</i></h1>
             <h2 class="subtitle-deathgrips text-deathgrips">Death Grips</h2>
@@ -23,59 +31,85 @@
                 </tr>
                 <tr>
                     <td>1</td>
-                    <td>A Lot's Gonna Change</td>
-                    <td>4:22</td>
+                    <td>"Beware"</td>
+                    <td>5:53</td>
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td>Andromeda</td>
-                    <td>4:40</td>
+                    <td>"Guillotine"</td>
+                    <td>3:43</td>
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td>Everyday</td>
-                    <td>5:07</td>
+                    <td>"Spread Eagle Cross the Block"</td>
+                    <td>3:52</td>
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td>Something to Believe</td>
-                    <td>4:46</td>
+                    <td>"Lord of the Game" (featuring Mexican Girl)</td>
+                    <td>3:30</td>
                 </tr>
                 <tr>
                     <td>5</td>
-                    <td>Titanic Rising</td>
-                    <td>1:36</td>
+                    <td>"Takyon (Death Yon)"</td>
+                    <td>2:48</td>
                 </tr>
                 <tr>
                     <td>6</td>
-                    <td>Movies</td>
-                    <td>5:54</td>
+                    <td>"Cut Throat (Intrumental)"</td>
+                    <td>1:12</td>
                 </tr>
                 <tr>
                     <td>7</td>
-                    <td>Mirror Forever</td>
-                    <td>5:06</td>
+                    <td>"Klink"</td>
+                    <td>3:22</td>
                 </tr>
                 <tr>
                     <td>8</td>
-                    <td>Wild Time</td>
-                    <td>6:09</td>
+                    <td>"Culture Shock"</td>
+                    <td>4:21</td>
                 </tr>
                 <tr>
                     <td>9</td>
-                    <td>Picture Me Better</td>
-                    <td>3:42</td>
+                    <td>"5D"</td>
+                    <td>0:43</td>
                 </tr>
                 <tr>
                     <td>10</td>
-                    <td>Nearer to Thee</td>
-                    <td>1:06</td>
+                    <td>"Thru the Walls"</td>
+                    <td>3:56</td>
+                </tr>
+                <tr>
+                    <td>11</td>
+                    <td>"Known for It"</td>
+                    <td>4:13</td>
+                </tr>
+                <tr>
+                    <td>12</td>
+                    <td>"I Want It I Need It (Death Heated)"</td>
+                    <td>6:11</td>
+                </tr>
+                <tr>
+                    <td>13</td>
+                    <td>"Blood Creepin"</td>
+                    <td>4:50</td>
                 </tr>
             </table>
         </div>
         <div >
-            <p class="text-deathgrips">
-                this is one of the best chamber pop records to come out ever
+            <p class="text-deathgrips album-description">
+                    Death Grips is an industrial, experimental hip-hop group composed of<br> members MC Ride (vocals, lyrics), Zach Hill (drums), and<br> Andy Morin (keyboard, production)
+                    <br>
+                    <br>
+                    <i>Exmilitary</i> is the groups first album, and is incredibly different<br> from any other hip-hop album I've ever heard
+                    <br>
+                    <br>
+                    <i>Exmilitary</i> was released on April 25, 2011 independently and for free.
+                    <br>
+                    <br>
+                    My favorite song is Spread Eagle Cross the Block
+                    <br>
+                    <br> 
             </p>
         </div>
         
