--- a/index.html
+++ b/index.html
@@ -8,75 +8,98 @@
 </head>
 <body class="bg bg-title">
     <main>
-        <h1 class="title-font"> <a href="index.html">My Favorite<br> Albums of All Time</a> </h1>
-        <div class="intro-section">
-            <p>
-                Hi my name is Sebastian Schroh, and here is a list of my favorite albums in no particular order
-            </p>
-            <ul>
-                <li><i>Titanic Rising</i> by Weyes Blood</li>
-                <li><i>Exmilitary</i> by Death Grips</li>
-                <li><i>To Pimp a Butterfly</i> by Kendrick Lamar</li>
-                <li><i>Blonde</i> by Frank Ocean</li>
-                <li><i>Untrue</i> by Burial</li>
-            </ul>
-            <p>
-                Click on the pictures below to learn more about each album
-            </p>
+        <nav>
+            <a href="weyesblood.html"><i>Titanic Rising</i><br>Weyes Blood</a>
+            <a href="deathgrips.html"><i>Exmilitary</i><br>Death Grips</a>
+            <a href="kendricklamar.html"><i>To Pimp A Butterfly</i><br> Kendrick Lamar</a>
+            <a href="frankocean.html"><i>Blonde</i><br>Frank Ocean</a>
+            <a href="burial.html"><i>Untrue</i><br>Burial</a>
+            <a href="charlixcx.html"><i>Charli</i><br>Charli XCX</a>
+        </nav>
+        <div class="intro-div">
+            <h1 class="title-font"> <a href="index.html">My Favorite<br> Albums of All Time</a> </h1>
+            <div class="intro-section">
+                <p class="intro-text">
+                    Hi my name is Sebastian Schroh, and here is a list of my favorite albums in no particular order
+                </p>
+                <ul>
+                    <li class="intro-text"><i>Titanic Rising</i> by Weyes Blood</li>
+                    <li class="intro-text"><i>Exmilitary</i> by Death Grips</li>
+                    <li class="intro-text"><i>To Pimp a Butterfly</i> by Kendrick Lamar</li>
+                    <li class="intro-text"><i>Blonde</i> by Frank Ocean</li>
+                    <li class="intro-text"><i>Untrue</i> by Burial</li>
+                    <li class="intro-text"><i>Charli</i> by Charli XCX</li>
+                </ul>
+                <p class="intro-text">
+                    Click on the pictures to the right or navigate using the navigation menu<br> to learn more about each album
+                </p>
+            </div>
         </div>
-        <div class="album-bar">
-            <a href="weyesblood.html">
-                <div class="image-text-container">
-                    <img src="images/weyes-blood-titanic-rising-album-cover-640x640.jpg">
-                    <div class="image-text-overlay">
-                        <div class="image-text">
-                            Weyes Blood<br>Titanic Rising
+        <div class="album-div">
+            <div class="album-bar">
+                <a href="weyesblood.html">
+                    <div class="image-text-container">
+                        <img src="images/weyes-blood-titanic-rising-album-cover-640x640.jpg">
+                        <div class="image-text-overlay">
+                            <div class="image-text">
+                                Titanic Rising<br>Weyes Blood
+                            </div>
                         </div>
                     </div>
-                </div>
-            </a>
+                </a>
 
-            <a href="deathgrips.html">
-                <div class="image-text-container">
-                    <img src="images/death-grips-exmilitary-cover-640x640.jpeg">
-                    <div class="image-text-overlay">
-                        <div class="image-text">
-                            Death Grips<br>Exmilitary
+                <a href="deathgrips.html">
+                    <div class="image-text-container">
+                        <img src="images/death-grips-exmilitary-cover-640x640.jpeg">
+                        <div class="image-text-overlay">
+                            <div class="image-text">
+                                Exmilitary<br>Death Grips
+                            </div>
                         </div>
                     </div>
-                </div>
-            </a>
+                </a>
 
-            <a href="kendricklamar.html">
-                <div class="image-text-container">
-                    <img src="images/kendrick-lamar-to-pimp-a-butterfly-640x640.jpg">
-                    <div class="image-text-overlay">
-                        <div class="image-text">
-                            Kendrick Lamar<br>To Pimp A Butterfly
+                <a href="kendricklamar.html">
+                    <div class="image-text-container">
+                        <img src="images/kendrick-lamar-to-pimp-a-butterfly-640x640.jpg">
+                        <div class="image-text-overlay">
+                            <div class="image-text">
+                                To Pimp A Butterfly<br>Kendrick Lamar
+                            </div>
                         </div>
                     </div>
-                </div>
-            </a>
-            <a href="frankocean.html">
-                <div class="image-text-container">
-                    <img src="images/frank-ocean-blonde-640x640.jpg">
-                    <div class="image-text-overlay">
-                        <div class="image-text">
-                            Frank Ocean<br>Blonde
+                </a>
+                <a href="frankocean.html">
+                    <div class="image-text-container">
+                        <img src="images/frank-ocean-blonde-640x640.jpg">
+                        <div class="image-text-overlay">
+                            <div class="image-text">
+                                Blonde<br>Frank Ocean
+                            </div>
                         </div>
                     </div>
-                </div>
-            </a>
-            <a href="burial.html">
-                <div class="image-text-container">
-                    <img src="images/burial-untrue-640x640.jpg">
-                    <div class="image-text-overlay">
-                        <div class="image-text">
-                            Burial<br>Untrue
+                </a>
+                <a href="burial.html">
+                    <div class="image-text-container">
+                        <img src="images/burial-untrue-640x640.jpg">
+                        <div class="image-text-overlay">
+                            <div class="image-text">
+                                Untrue<br>Burial
+                            </div>
                         </div>
                     </div>
-                </div>
-            </a>
+                </a>
+                <a href="charlixcx.html">
+                    <div class="image-text-container">
+                        <img src="images/charli-xcx-charli-cover-640x640.jpeg">
+                        <div class="image-text-overlay">
+                            <div class="image-text">
+                                Charli<br>Charli XCX
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </div>
     </main>
 </body>
