--- a/kendricklamar.html
+++ b/kendricklamar.html
@@ -9,6 +9,14 @@
 <body class="bg bg-kendricklamar bg-tint-kendricklamar">
     <main>
         <h2 class="top-left-site-link text-kendricklamar"><a href="index.html">My Favorite<br>Albums of<br>All Time</a></h2>
+        <nav class="nav-kendricklamar">
+            <a class ="text-kendricklamar" href="weyesblood.html"><i>Titanic Rising</i><br>Weyes Blood</a>
+            <a class ="text-kendricklamar" href="deathgrips.html"><i>Exmilitary</i><br>Death Grips</a>
+            <a class ="text-kendricklamar" href="kendricklamar.html"><i>To Pimp A Butterfly</i><br> Kendrick Lamar</a>
+            <a class ="text-kendricklamar" href="frankocean.html"><i>Blonde</i><br>Frank Ocean</a>
+            <a class ="text-kendricklamar" href="burial.html"><i>Untrue</i><br>Burial</a>
+            <a class ="text-kendricklamar" href="charlixcx.html"><i>Charli</i><br>Charli XCX</a>
+        </nav>
         <div class ="title-card-kendricklamar">
             <h1 class="title-kendricklamar text-kendricklamar"><i>To Pimp A Butterfly</i></h1>
             <h2 class="subtitle-kendricklamar text-kendricklamar">Kendrick Lamar</h2>
@@ -23,59 +31,105 @@
                 </tr>
                 <tr>
                     <td>1</td>
-                    <td>A Lot's Gonna Change</td>
-                    <td>4:22</td>
+                    <td>"Wesley's Theory" (featuring George Clinton and Thundercat)</td>
+                    <td>4:47</td>
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td>Andromeda</td>
-                    <td>4:40</td>
+                    <td>"For Free? (Interlude)"</td>
+                    <td>2:10</td>
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td>Everyday</td>
-                    <td>5:07</td>
+                    <td>"King Kunta"</td>
+                    <td>3:54</td>
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td>Something to Believe</td>
-                    <td>4:46</td>
+                    <td>"Institutionalized" (featuring Bilal, Anna Wise and Snoop Dogg)</td>
+                    <td>4:31</td>
                 </tr>
                 <tr>
                     <td>5</td>
-                    <td>Titanic Rising</td>
-                    <td>1:36</td>
+                    <td>"These Walls" (featuring Bilal, Anna Wise and Thundercat)</td>
+                    <td>5:00</td>
                 </tr>
                 <tr>
                     <td>6</td>
-                    <td>Movies</td>
-                    <td>5:54</td>
+                    <td>"U"</td>
+                    <td>4:28</td>
                 </tr>
                 <tr>
                     <td>7</td>
-                    <td>Mirror Forever</td>
-                    <td>5:06</td>
+                    <td>"Alright"</td>
+                    <td>3:39</td>
                 </tr>
                 <tr>
                     <td>8</td>
-                    <td>Wild Time</td>
-                    <td>6:09</td>
+                    <td>"For Sale? (Interlude)"</td>
+                    <td>4:51</td>
                 </tr>
                 <tr>
                     <td>9</td>
-                    <td>Picture Me Better</td>
-                    <td>3:42</td>
+                    <td>"Momma"</td>
+                    <td>4:43</td>
                 </tr>
                 <tr>
                     <td>10</td>
-                    <td>Nearer to Thee</td>
-                    <td>1:06</td>
+                    <td>"Hood Politics"</td>
+                    <td>4:52</td>
+                </tr>
+                <tr>
+                    <td>11</td>
+                    <td>"How Much a Dollar Cost" (featuring James Fauntleroy and Ronald Isley)</td>
+                    <td>4:21</td>
+                </tr>
+                <tr>
+                    <td>12</td>
+                    <td>"Complexion (A Zulu Love)" (featuring Rapsody)</td>
+                    <td>4:23</td>
+                </tr>
+                <tr>
+                    <td>13</td>
+                    <td>"The Blacker the Berry"</td>
+                    <td>5:28</td>
+                </tr>
+                <tr>
+                    <td>14</td>
+                    <td>"You Ain't Gotta Lie (Momma Said)"</td>
+                    <td>4:01</td>
+                </tr>
+                <tr>
+                    <td>15</td>
+                    <td>"I"</td>
+                    <td>5:36</td>
+                </tr>
+                <tr>
+                    <td>16</td>
+                    <td>"Mortal Man"</td>
+                    <td>12:07</td>
+                </tr>
+                <tr>
+                    <td>17</td>
+                    <td>"Mortal Man"</td>
+                    <td>12:07</td>
                 </tr>
             </table>
         </div>
         <div >
-            <p class="text-kendricklamar">
-                this is one of the best chamber pop records to come out ever
+            <p class="text-kendricklamar album-description">
+                Kendrick Lamar (Kendrick Lamar Ducksworth) is an American Rapper<br> from Compton, California.
+                <br>
+                <br>
+                <i>To Pimp A Butterfly</i> is Lamar's third studio album, and is the best<br> hip-hop album ever created. 
+                <br>
+                <br>
+                <i>To Pimp A Butterfly</i> was released on March 15, 2015 under the<br>record label Top Dawg Entertainment.
+                <br>
+                <br>
+                My favorite song is "U"
+                <br>
+                    <br> 
             </p>
         </div>
         
