added titles and fixed some typos in charlixcx.html

--- a/burial.html
+++ b/burial.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<title>Untrue ☕</title>
 <head>
     <!-- the google api that gives us the font "Zilla Slab" which would be a sick band name-->
     <!-- source for the guitar image https://www.pexels.com/photo/audio-e-guitars-guitars-music-6966/ -->
@@ -114,7 +115,7 @@
                 <i>Untrue</i> is Burial's second studio album, and is combination of dusbtep,<br> UK garage and ambient music. 
                 <br>
                 <br>
-                <i>Untrue</i> was released on November 5, 2007 under the record label<br>Hyperdub.
+                <i>Untrue</i> was released on November 5th, 2007 under the record label<br>Hyperdub.
                 <br>
                 <br>
                 My favorite song is "Archangel"
