--- a/charlixcx.html
+++ b/charlixcx.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<title>Charli 💗</title>
 <head>
     <!-- the google api that gives us the font "Zilla Slab" which would be a sick band name-->
     <!-- source for the guitar image https://www.pexels.com/photo/audio-e-guitars-guitars-music-6966/ -->
@@ -114,7 +115,7 @@
                 <i>Charli</i> is Charli's third studio album, and is my favorite<br> pop album ever. 
                 <br>
                 <br>
-                <i>Charli</i> was released on September 13t, 2019 under the record labels<br>Asylum and Atlantic Records UK.
+                <i>Charli</i> was released on September 13th, 2019 under the record labels<br>Asylum and Atlantic Records UK.
                 <br>
                 <br>
                 My favorite song is "Gone"
