--- a/deathgrips.html
+++ b/deathgrips.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<title>Exmilitary 💀</title>
 <head>
     <!-- the google api that gives us the font "Zilla Slab" which would be a sick band name-->
     <!-- source for the guitar image https://www.pexels.com/photo/audio-e-guitars-guitars-music-6966/ -->
@@ -104,7 +105,7 @@
                     <i>Exmilitary</i> is the groups first album, and is incredibly different<br> from any other hip-hop album I've ever heard
                     <br>
                     <br>
-                    <i>Exmilitary</i> was released on April 25, 2011 independently and for free.
+                    <i>Exmilitary</i> was released on April 25th, 2011 independently and for free.
                     <br>
                     <br>
                     My favorite song is Spread Eagle Cross the Block
