--- a/frankocean.html
+++ b/frankocean.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<title>Blonde 😭</title>
 <head>
     <!-- the google api that gives us the font "Zilla Slab" which would be a sick band name-->
     <!-- source for the guitar image https://www.pexels.com/photo/audio-e-guitars-guitars-music-6966/ -->
@@ -125,7 +126,7 @@
                 <i>Blonde</i> is Ocean's third studio album, and my favorite album. 
                 <br>
                 <br>
-                <i>Blonde</i> was released on August 20, 2016 under Ocean's own label,<br> Boys Don't Cry.
+                <i>Blonde</i> was released on August 20th, 2016 under Ocean's own label,<br> Boys Don't Cry.
                 <br>
                 <br>
                 My favorite song is "Ivy"
