--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<title>Fav Albums 🎵</title>
 <head>
     <!-- the google api that gives us the font "Zilla Slab" which would be a sick band name-->
     <!-- source for the guitar image https://www.pexels.com/photo/audio-e-guitars-guitars-music-6966/ -->
@@ -31,7 +32,11 @@
                     <li class="intro-text"><i>Charli</i> by Charli XCX</li>
                 </ul>
                 <p class="intro-text">
-                    Click on the pictures to the right or navigate using the navigation menu<br> to learn more about each album
+                    Click on the pictures to the right or navigate using the navigation menu
+                    <br>to learn more about each album.
+                    <br>
+                    <br>Tip: you can always navigate back to the main menu by clicking the
+                    <br>words "My Favorite Albums of All Time".
                 </p>
             </div>
         </div>
