--- a/kendricklamar.html
+++ b/kendricklamar.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<title>To Pimp A Butterfly 🦋</title>
 <head>
     <!-- the google api that gives us the font "Zilla Slab" which would be a sick band name-->
     <!-- source for the guitar image https://www.pexels.com/photo/audio-e-guitars-guitars-music-6966/ -->
@@ -119,7 +120,7 @@
                 <i>To Pimp A Butterfly</i> is Lamar's third studio album, and is the best<br> hip-hop album ever created. 
                 <br>
                 <br>
-                <i>To Pimp A Butterfly</i> was released on March 15, 2015 under the<br>record label Top Dawg Entertainment.
+                <i>To Pimp A Butterfly</i> was released on March 15th, 2015 under the<br>record label Top Dawg Entertainment.
                 <br>
                 <br>
                 My favorite song is "U"
