--- a/weyesblood.html
+++ b/weyesblood.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<title>Titanic Rising 🚢</title>
 <head>
     <!-- the google api that gives us the font "Zilla Slab" which would be a sick band name-->
     <!-- source for the guitar image https://www.pexels.com/photo/audio-e-guitars-guitars-music-6966/ -->
