added minemopper, and new home page to pick between mini projects

--- a/frankocean.html
+++ b/frankocean.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg bg-frankocean bg-tint-frankocean">
     <main>
-        <h2 class="top-left-site-link text-frankocean"><a href="index.html">My Favorite<br>Albums of<br>All Time</a></h2>
+        <h2 class="top-left-site-link text-frankocean"><a href="favalbum.html">My Favorite<br>Albums of<br>All Time</a></h2>
         <nav class="nav-frankocean">
             <a class ="text-frankocean" href="weyesblood.html"><i>Titanic Rising</i><br>Weyes Blood</a>
             <a class ="text-frankocean" href="deathgrips.html"><i>Exmilitary</i><br>Death Grips</a>
