--- a/minemopper.html
+++ b/minemopper.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Sebastian Home Page 💁‍♂️</title>
+<title>Minemopper 💣</title>
 <head>
     <!-- the google api that gives us the font "Zilla Slab" which would be a sick band name-->
     <!-- source for the guitar image https://www.pexels.com/photo/audio-e-guitars-guitars-music-6966/ -->
@@ -10,14 +10,7 @@
 <body class="bg main-bg">
 <div>
     <main>
-        <h1 class="main-title-font"> <a href="index.html">Sebastian Schroh Show</a> </h1>
-        <br>
-        <br>
-        <br>
-        <ul class="big-list">
-            <li class="big-list-item"><a href="favalbum.html" target="_blank"> My favourite album website</a></li>
-            <li class="big-list-item"><a href="minemopper.html" target="_blank">Minemopper</a></li>
-        </ul>
+        <h1 class="main-title-font"> <a href="minemopper.html">Minemopper</a> </h1>
     </main>
 </div>
 </body>
