--- a/burial.html
+++ b/burial.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg bg-burial bg-tint-burial">
     <main>
-        <h2 class="top-left-site-link text-burial"><a href="index.html">My Favorite<br>Albums of<br>All Time</a></h2>
+        <h2 class="top-left-site-link text-burial"><a href="favalbum.html">My Favorite<br>Albums of<br>All Time</a></h2>
         <nav class="nav-burial">
             <a class ="text-burial" href="weyesblood.html"><i>Titanic Rising</i><br>Weyes Blood</a>
             <a class ="text-burial" href="deathgrips.html"><i>Exmilitary</i><br>Death Grips</a>
