--- a/charlixcx.html
+++ b/charlixcx.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg bg-charlixcx bg-tint-charlixcx">
     <main>
-        <h2 class="top-left-site-link text-charlixcx"><a href="index.html">My Favorite<br>Albums of<br>All Time</a></h2>
+        <h2 class="top-left-site-link text-charlixcx"><a href="favalbum.html">My Favorite<br>Albums of<br>All Time</a></h2>
         <nav class="nav-charlixcx">
             <a class ="text-charlixcx" href="weyesblood.html"><i>Titanic Rising</i><br>Weyes Blood</a>
             <a class ="text-charlixcx" href="deathgrips.html"><i>Exmilitary</i><br>Death Grips</a>
