--- a/deathgrips.html
+++ b/deathgrips.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg bg-deathgrips bg-tint-deathgrips">
     <main>
-        <h2 class="top-left-site-link text-deathgrips"><a href="index.html">My Favorite<br>Albums of<br>All Time</a></h2>
+        <h2 class="top-left-site-link text-deathgrips"><a href="favalbum.html">My Favorite<br>Albums of<br>All Time</a></h2>
         <nav class="nav-deathgrips">
             <a class ="text-deathgrips" href="weyesblood.html"><i>Titanic Rising</i><br>Weyes Blood</a>
             <a class ="text-deathgrips" href="deathgrips.html"><i>Exmilitary</i><br>Death Grips</a>
