--- a/kendricklamar.html
+++ b/kendricklamar.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg bg-kendricklamar bg-tint-kendricklamar">
     <main>
-        <h2 class="top-left-site-link text-kendricklamar"><a href="index.html">My Favorite<br>Albums of<br>All Time</a></h2>
+        <h2 class="top-left-site-link text-kendricklamar"><a href="favalbum.html">My Favorite<br>Albums of<br>All Time</a></h2>
         <nav class="nav-kendricklamar">
             <a class ="text-kendricklamar" href="weyesblood.html"><i>Titanic Rising</i><br>Weyes Blood</a>
             <a class ="text-kendricklamar" href="deathgrips.html"><i>Exmilitary</i><br>Death Grips</a>
