--- a/weyesblood.html
+++ b/weyesblood.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg bg-weyesblood bg-tint-weyesblood">
     <main>
-        <h2 class="top-left-site-link text-weyesblood"><a href="index.html">My Favorite<br>Albums of<br>All Time</a></h2>
+        <h2 class="top-left-site-link text-weyesblood"><a href="favalbum.html">My Favorite<br>Albums of<br>All Time</a></h2>
         <nav class="nav-weyesblood">
             <a class ="text-weyesblood" href="weyesblood.html"><i>Titanic Rising</i><br>Weyes Blood</a>
             <a class ="text-weyesblood" href="deathgrips.html"><i>Exmilitary</i><br>Death Grips</a>
