added flipping functionality, images, and styles

--- a/minemopper.html
+++ b/minemopper.html
@@ -24,7 +24,7 @@
     <div class="grid"></div>
   </div>
   <div class="status">
-    Number of mines: <span class="mineCount">0</span> Time: <span class="time">0</span>
+    <span>💣: </span><span class="mineCount">0</span> <span>🕒: </span><span class="time">0</span>
   </div>
   <div id="overlay">
     <div id="overlayin">
