added winning and losing

--- a/minemopper.html
+++ b/minemopper.html
@@ -28,8 +28,8 @@
   </div>
   <div id="overlay">
     <div id="overlayin">
-      <p class="big glow">Congratulations, you won!!!</p>
-      <p class="darker">It took you <span class="mineCount">0</span> moves.</p>
+      <p class="big glow"></p>
+      <p class="darker">in <span class="time">0</span> seconds</p>
       <p class="darker">Click anywhere to start a new game.
     </div>
   </div>
